@@ -86,10 +86,12 @@ port_register( periph_type type, const periph_port_t *port )
 void
 periph_register( periph_type type, const periph_t *periph )
 {
+  periph_private_t *private;
+
   if( !peripherals )
     peripherals = g_hash_table_new_full( NULL, NULL, NULL, libspectrum_free );
 
-  periph_private_t *private = libspectrum_new( periph_private_t, 1 );
+  private = libspectrum_new( periph_private_t, 1 );
 
   private->present = PERIPH_PRESENT_NEVER;
   private->active = 0;
