@@ -146,10 +146,11 @@ nic_w5100_alloc( void )
 {
   int error;
   int i;
+  nic_w5100_t *self;
   
   compat_socket_networking_init();
 
-  nic_w5100_t *self = libspectrum_new( nic_w5100_t, 1 );
+  self = libspectrum_new( nic_w5100_t, 1 );
 
   self->selfpipe = compat_socket_selfpipe_alloc();
 
